--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-jvectormap/core": "^1.0.4",
+    "@react-jvectormap/world": "^1.1.2",
     "@tanstack/react-query": "^5.90.11",
+    "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +32,7 @@
     "next-themes": "^0.4.6",
     "nextjs": "^0.0.3",
     "react": "19.2.0",
+    "react-apexcharts": "^1.9.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
     "react-icons": "^5.5.0",
@@ -38,6 +42,7 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
